# jobcraft

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PROVIDER_SETTINGS_VERIFICATION.md  README.md  SECURITY.md  VERCEL_DEPLOYMENT.md  main.py  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: main.py
backend/app/models/: db.py
backend/app/schemas/: job.py  profile.py
backend/core/: config.py  db.py  llm_factory.py  model_catalog.py  router.py  safety.py  settings.py  settings_manager.py
backend/crews/: jobcraft_crew.py
backend/providers/: anthropic.py  base.py  gemini.py  ollabridge.py  ollama.py  openai_provider.py  watsonx.py
backend/routers/: assist.py  digest.py  discovery.py  health.py  jobcraft.py  meta.py  ollabridge_connect.py  providers.py  tracker.py
backend/services/: browser_assist.py  cv_parser.py  emailer.py  job_discovery.py  matching.py
backend/services/connectors/: ashby.py  greenhouse.py  lever.py
docker/: nginx-fullstack.conf  nginx.conf  start.sh  supervisord.conf
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: OllaBridgeConnect.jsx  SettingsView.jsx
