[project]
name = "jobcraft"
version = "1.1.0"
description = "JobCraft Copilot: CrewAI + Multi-LLM Router + OllaBridge-first + compliant job discovery + tracking"
requires-python = ">=3.11"
dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"pydantic-settings",
"python-multipart",
"httpx",
"rich",
"tenacity",
"python-dotenv",
"crewai",
"PyMuPDF",
"python-docx",
"rapidfuzz",
"jinja2",
"aiosmtplib",
"sqlmodel",
"sqlalchemy",
"playwright>=1.41.0",
"playwright-stealth",
]

[project.scripts]
jobcraft-serve = "backend.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
